--- a/index.html
+++ b/index.html
@@ -929,7 +929,7 @@
         let isAuthenticated = false;
 
         const CLERK_PUBLISHABLE_KEY = 'pk_live_Y2xlcmsud29zaC5jYyQ';
-        const API_BASE = window.location.hostname === 'localhost' ? 'http://localhost:8787' : 'https://wosh.cc';
+        const API_BASE = window.location.hostname === 'localhost' ? 'http://localhost:8787' : 'https://wosh-api.jesus-alvarado-atalaya.workers.dev';
 
         // Sistema de traducción
         function setLanguage(lang) {
