--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-// fronted/index.js
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -755,16 +754,52 @@
                 transition-duration: 0.01ms !important;
             }
         }
+
+        .beta-banner {
+            background: linear-gradient(135deg, #f59e0b 0%, #d97706 100%);
+            color: white;
+            text-align: center;
+            padding: 12px 20px;
+            font-size: 0.875rem;
+            font-weight: 600;
+            position: relative;
+            display: block;
+        }
+
+        .beta-banner i {
+            margin-right: 8px;
+        }
+
+        .beta-banner .close-btn {
+            position: absolute;
+            right: 16px;
+            top: 50%;
+            transform: translateY(-50%);
+            background: none;
+            border: none;
+            color: white;
+            font-size: 1rem;
+            cursor: pointer;
+            padding: 4px;
+            opacity: 0.8;
+        }
+
+        .beta-banner .close-btn:hover {
+            opacity: 1;
+        }
+
+        .beta-banner.hidden {
+            display: none;
+        }
     </style>
 </head>
 <body>
-    <div class="beta-banner">
+    <div class="beta-banner" id="beta-banner">
         <i class="fas fa-flask"></i>
         Esta página está en BETA - Siéntete libre de probarla, pero tus enlaces podrían desaparecer
-    </div>
-    <div class="lang-switcher">
-        <a href="#" class="lang-btn active" onclick="setLanguage('es')">🇪🇸 ES</a>
-        <a href="#" class="lang-btn" onclick="setLanguage('en')">🇺🇸 EN</a>
+        <button class="close-btn" onclick="closeBetaBanner()">
+            <i class="fas fa-times"></i>
+        </button>
     </div>
 
     <div class="container">
@@ -1330,6 +1365,16 @@
             loadPublicLinks();
             updateStats();
         }, 30000);
+
+        function closeBetaBanner() {
+            document.getElementById('beta-banner').classList.add('hidden');
+            localStorage.setItem('beta_banner_closed', 'true');
+        }
+
+        // En initApp(), agregar:
+        if (localStorage.getItem('beta_banner_closed') === 'true') {
+            document.getElementById('beta-banner').classList.add('hidden');
+        }
     </script>
 </body>
 </html>
