--- a/index.html
+++ b/index.html
@@ -796,7 +796,7 @@
 <body>
     <div class="beta-banner" id="beta-banner">
         <i class="fas fa-flask"></i>
-        Esta página está en BETA - Siéntete libre de probarla, pero tus enlaces podrían desaparecer
+        Esta página está en BETA - Siéntete libre de probarla, pero tus enlaces podrían desaparecer en futuras versiones de la app
         <button class="close-btn" onclick="closeBetaBanner()">
             <i class="fas fa-times"></i>
         </button>
