--- a/index.html
+++ b/index.html
@@ -3,7 +3,78 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>wosh.cc - Acortador de URLs</title>
+    <title>wosh.cc - Acortador de URLs | Por MrChasp.com</title>
+
+        <!-- SEO Meta Tags -->
+    <title>wosh.cc - Acortador de URLs | Por MrChasp.com</title>
+    <meta name="description" content="El acortador de URLs más rápido y elegante del mundo por MrChasp.com | The fastest and most elegant URL shortener by MrChasp.com">
+    <meta name="keywords" content="wosh.cc, wosh, acortador, shortener, shortenUrl, mrchasp, Jesus Alvarado Ataya, acortador url, url shortener, short link, enlace corto">
+    <meta name="author" content="MrChasp - Jesus Alvarado Atalaya">
+    <meta name="robots" content="index, follow">
+
+    <!-- Idioma dinámico -->
+    <meta name="language" content="es,en">
+    <link rel="alternate" hreflang="es" href="https://wosh.cc">
+    <link rel="alternate" hreflang="en" href="https://wosh.cc">
+    <link rel="alternate" hreflang="x-default" href="https://wosh.cc">
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="wosh.cc - Acortador de URLs | Por MrChasp.com">
+    <meta property="og:description" content="El acortador de URLs más rápido y elegante del mundo por MrChasp.com | The fastest and most elegant URL shortener by MrChasp.com">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://wosh.cc">
+    <meta property="og:image" content="https://wosh.cc/preview.jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:site_name" content="wosh.cc - Acortador de URLs">
+    <meta property="og:locale" content="es,en">
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="wosh.cc - Acortador de URLs | Por MrChasp.com">
+    <meta name="twitter:description" content="El acortador de URLs más rápido y elegante del mundo por MrChasp.com | The fastest and most elegant URL shortener by MrChasp.com">
+    <meta name="twitter:image" content="https://wosh.cc/preview.jpg">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/webp" sizes="512x512" href="favicon.svg">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon.svg">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon.svg">
+    <link rel="manifest" href="site.webmanifest">
+
+    <!-- Schema.org JSON-LD -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "WebPage",
+        "name": "wosh.cc - Acortador de URLs | Por MrChasp.com",
+        "description": "El acortador de URLs más rápido y elegante del mundo por MrChasp.com | The fastest and most elegant URL shortener by MrChasp.com",
+        "url": "https://wosh.cc",
+        "author": {
+            "@type": "Person",
+            "name": "Jesus Alvarado Atalaya - MrChasp"
+        },
+        "image": {
+            "@type": "ImageObject",
+            "url": "https://wosh.cc/preview.jpg",
+            "width": 1200,
+            "height": 630
+        },
+        "publisher": {
+            "@type": "Person",
+            "name": "MrChasp"
+        },
+        "about": {
+            "@type": "Thing",
+            "name": "El acortador de URLs más rápido y elegante del mundo por MrChasp.com | The fastest and most elegant URL shortener by MrChasp.com"
+        },
+        "audience": {
+            "@type": "Audience",
+            "audienceType": "profesionales, desarrolladores, personas en general"
+        },
+        "keywords": "wosh.cc, wosh, acortador, shortener, shortenUrl, mrchasp, Jesus Alvarado Ataya, acortador url, url shortener, short link, enlace corto"
+    }
+    </script>
+
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <script src="https://unpkg.com/@clerk/clerk-js@latest/dist/clerk.browser.js"></script>
