--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     <meta name="twitter:image" content="https://wosh.cc/preview.jpg">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/webp" sizes="512x512" href="favicon.svg">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon.svg">
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon.svg">
+    <link rel="icon" type="image/svg" sizes="512x512" href="favicon-512x512.svg">
+    <link rel="icon" type="image/svg" sizes="32x32" href="favicon-32x32.svg">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon-512x512.svg">
     <link rel="manifest" href="site.webmanifest">
 
     <!-- Schema.org JSON-LD -->
