--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon-180x180.png">
+<!--     <link rel="apple-touch-icon" sizes="180x180" href="favicon-180x180.png"> -->
     <link rel="manifest" href="site.webmanifest">
 
     <!-- Schema.org JSON-LD -->
@@ -875,7 +875,7 @@
 
     <div class="container">
         <div class="header">
-            <h1><i class="fas fa-link"></i> <span class="wosh">wosh</span><span class="cc">.cc</span></h1>
+            <h1><img src="favicon.svg" alt="Logo" style="width: 1em; height: 1em; vertical-align: middle;"> <span class="wosh">wosh</span><span class="cc">.cc</span></h1>
             <p data-translate="header_subtitle">El acortador de URLs más rápido y elegante del mundo</p>
         </div>
 
